# playground

./: .env  .gitignore
elf/: Cargo.toml
elf/src/: main.rs
ethers/: Cargo.toml  proxy.json
ethers/src/: main.rs
ethers1/: Cargo.toml
ethers1/src/: main.rs
exex/: Cargo.toml
exex/src/: main.rs
jit/: Cargo.toml
jit/src/: main.rs
postgres/: Cargo.toml
postgres/src/: main.rs
rust-sqlite/: Cargo.toml
rust-sqlite/src/: main.rs
sp1/: Cargo.toml
sp1/src/: account.rs  main.rs  proofs.rs
sqlx/: Cargo.toml
sqlx/src/: main.rs
tracing/: Cargo.toml  myapp-logs.2023-11-28-07  tracings-logs.2023-11-28-07
tracing/src/: main.rs
