[package]
name = "sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.20.0", features = ["rt", "macros", "rt-multi-thread"] }
anyhow = "1.0"
rlp = "0.4"
hex = "0.4"
