[package]
name = "tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "std",
    "local-time",
    "time",
    "json",
] }
tokio = { version = "1.15", features = ["full", "tracing"] }
once_cell = "1.18.0"
